--- a/secao_pops/centralpops.html
+++ b/secao_pops/centralpops.html
@@ -5,30 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Central Pops</title>
-    <link rel="stylesheet" type="text/css" href="../arte.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/HeaderBaseTreinamentos.css">
 </head>
 
 <body>
-    <div class="imagem-com-fundo">
-        <img src="../img/Logo Science.png" alt="Logo Science">
-        <nav>
-            <ul class="menu">
-                <li><a href="../centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
-            </ul>
-        </nav>
-    </div>
-    <br>
-    <h2>P R O C E D I M E N T O <br>O P E R A C I O N A L <br>P A D R Ã O </h2>
-    <br>
+    <header>
+        <div class="menu_pagina">
+            <div class="img_menu">
+                <a href="https://svriglobal.com/">
+                    <img class="logo" src="../assets/img/logo-science-valley.png" alt="Logo Science">
+                </a>
+            </div>
+            <nav>
+                <ul class="menu">
+                    <li><a href="../centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <h2>PROCEDIMENTO - OPERACIONAL - PADRÃO </h2>
     <div class="painel">
-        <br>
-        <br>
-        <br>
-        <br>
         <div class="teste">
             <br>
             <div class="conteinerbotao">
-                <button id="Botaoredcap" class="botao-linkhubsistema">Manual REDCap</button>
+                <button id="Botaoredcap" class="botaovideo">Manual REDCap</button>
             </div>
         </div>
     </div>
