--- a/treinamentotecnologia/TreinamentoTecnologia_Polo.html
+++ b/treinamentotecnologia/TreinamentoTecnologia_Polo.html
@@ -5,30 +5,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Treinamento Polotrail</title>
-    <link rel="stylesheet" type="text/css" href="../arte.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/HeaderBaseImgBotoes.css">
 </head>
 
 <body>
-    <div class="imagem-com-fundo">
-        <img src="../img/Logo Science.png" alt="Logo Science">
-        <nav>
-            <ul class="menu">
-                <li><a href="../centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
-            </ul>
-        </nav>
-    </div>
-    <br>
-    <h2> P O L O - T R A I L</h2>
-    <br>
+    <header>
+        <div class="menu_pagina">
+            <div class="img_menu">
+                <a href="https://svriglobal.com/">
+                    <img class="logo" src="../assets/img/logo-science-valley.png" alt="Logo Science">
+                </a>
+            </div>
+            <nav>
+                <ul class="menu">
+                    <li><a href="../centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
+                </ul>
+            </nav>
+        
+        </div>
+    </header>
+
+    <h2> POLO - TRAIL</h2>
+
     <div class="painel">
-        <img src="../img/PoloTrailLogo-removebg-preview.png" id="poloimg">
-        <br>
-        <br>
-        <br>
-        <div class="conteinerbotao">
-            <button id="Botaoapresentacao" class="botao-linkpolo">Apresentação </button>
-            <button id="Botaotreinopolotrail" class="botao-linkpolo">Treinamento</button>
-            <button id="Botaovideopolotrail" class="botao-linkpolo">Video-Aulas</button>
+        <div class="imgtec">
+            <img class="imgtec" src="../assets/img/PoloTrailLogo-removebg-preview.png" id="poloimg">
+        </div>
+
+        <div class="Botoes_grid">
+            <button id="Botaoapresentacao" class="botaovideo">Apresentação </button>
+            <button id="Botaotreinopolotrail" class="botaovideo">Treinamento</button>
+            <button id="Botaovideopolotrail" class="botaovideo">Video-Aulas</button>
         </div>
     </div>
     <script>
