--- a/treinamentotecnologia/TreinamentoTecnologia_estruturati.html
+++ b/treinamentotecnologia/TreinamentoTecnologia_estruturati.html
@@ -5,29 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Treinamento Tecnologia</title>
-    <link rel="stylesheet" type="text/css" href="../arte.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/HeaderBaseTreinamentos.css">
 </head>
 
 <body>
-    <div class="imagem-com-fundo">
-        <img src="../img/Logo Science.png" alt="Logo Science">
-        <nav>
+    <header>
+        <div class="menu_pagina">
+            <div class="img_menu">
+                <a href="https://svriglobal.com/">
+                    <img class="logo" src="../assets/img/logo-science-valley.png" alt="Logo Science">
+                </a>
+            </div>
             <ul class="menu">
                 <li><a href="../integracaoti/IntegracaoTI.html">Integração Science</a></li>
             </ul>
-        </nav>
-    </div>
-    <br>
-    <br>
-    <h2>E S T R U T U R A<br> <br> T . I</h2>
-    <br>
-    <br>
-    <iframe class="video"
+        </div>
+    </header>
+    
+    <h2>ESTRUTURA T.I</h2>
+
+    <iframe class="videoTreinamento"
         src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=3f3b3b54-2440-4e42-860e-a80deadeaf0c&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
         width="640" height="360" frameborder="0" scrolling="no" allowfullscreen title="T.I.mp4"></iframe>
-    <br>
-    <br>
-    <button class="botaovideoEmail" id="proximo">Portal do Colaborador</button>
+    
+    <button class="botaovideo" id="proximo">Portal do Colaborador</button>
     <script>
         document.getElementById("proximo").onclick = function () {
             window.location.href = "TreinamentoTecnologia_PortalColaborador.html";
