--- a/treinamentoacademy/TreinamentoAcademy.html
+++ b/treinamentoacademy/TreinamentoAcademy.html
@@ -5,39 +5,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Treinamento Academy</title>
-    <link rel="stylesheet" type="text/css" href="../arte.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/HeaderBaseTreinamentos.css">
 </head>
 
 <body>
-    <div class="imagem-com-fundo">
-        <img src="../img/Logo Science.png" alt="Logo Science">
-        <nav>
-            <ul class="menu">
-                <li><a href="../centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
-                <li><a href="#">Aulas</a>
-                    <ul>
+    <header>
+        <div class="menu_pagina">
+            <div class="img_menu">
+                <a href="https://svriglobal.com/">
+                    <img class="logo" src="../assets/img/logo-science-valley.png" alt="Logo Science">
+                </a>
+            </div>
+            <div class="opçoes">
+                <ul class="menu">
+                    <li><a href="../centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
+                    <li><a href="#">Aulas</a>
+                        <ul>
                         <li><a href="TreinamentoAcademy.html">Pipeline</a></li>
 
-                    </ul>
-            </ul>
-        </nav>
-    </div>
-    <br>
-    <br>
-    <h2>T R E I N A M E N T O - A C A D E M Y</h2>
-    <br>
-    <h3> Pipeline  </h5>
-        <br>
-        <iframe class="video"
+                   </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+    </header>
+    <h2>TREINAMENTO - ACADEMY</h2>
+    <h3> Pipeline  </h3>
+        <div class="videoTreinamento">
+            <iframe class="videoTreinamento"
             src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=bc7f67ce-0900-4759-b6b8-b18d19fe6fcb&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
             width="640" height="360" frameborder="0" scrolling="no" allowfullscreen
-            title="Call gravar-20240311_094858-Gravação de Reunião.mp4"></iframe>
-        <br>
-        <br>
-        <button class="botaovideo" id="lgpd-aula2" class="botao-link">Próxima aula</button>
+            title="Call gravar-20240311_094858-Gravação de Reunião.mp4"></iframe></div> 
+        <button class="botaovideo" id="lgpd-aula2" class="botao-link">Formulario</button>
         <script>
             document.getElementById("lgpd-aula2").onclick = function () {
-                window.location.href = ".html";
+                window.location.href = "TreinamentoAcademyFormulario.html";
             };
         </script>
 </body>
