--- a/treinamentoacademy/TreinamentoAcademyFormulario.html
+++ b/treinamentoacademy/TreinamentoAcademyFormulario.html
@@ -5,17 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário Academy</title>
-    <link rel="stylesheet" type="text/css" href="../arte.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/HeaderBaseFormulario.css">
 </head>
 
 <body>
-    <div class="imagem-com-fundo">
-        <a href="TreinamentosLGPD.html">
-
-            <img src="../img/Logo Science.png" alt="Logo Science">
-        </a>
-        <h2 id="h2formulario">Q U E S T Õ E S</h2>
-    </div>
+    <header>
+        <div class="menu_pagina">
+            <div class="img_menu">
+                <a href="https://svriglobal.com/">
+                    <img class="logo" src="../assets/img/logo-science-valley.png" alt="Logo Science">
+                </a>
+            </div>
+            <h2 id = "h2formulario">QUESTÕES</h2>
+        </div>
+    </header>  
     <br>
     <br>
     <form id="quizForm" onsubmit="return validateQuiz()">
@@ -56,98 +59,12 @@
                     <br>
                     <br>
                 </div>
-                <div style="flex: 1; margin-right: 20px;">
-                    <label for="q4">4. Como tratar os dados pessoais e sensíveis em conformidade à LGPD?</label><br>
-                    <br><input type="radio" name="q4" value="a"> a) De maneira geral, sempre respeitando às regras da
-                    LGPD (Finalidade, Processo, Sentimento, Efeitos e Segurança) .<br>
-                    <br><input type="radio" name="q4" value="b"> b) De maneira geral, enviando um e-mail para a TI.<br>
-                    <br><input type="radio" name="q4" value="c"> c) Relatando a finalidade, processo, sentimento,
-                    efeitos e segurança para o comitê de ética.<br>
-                    <br><input type="radio" name="q4" value="d"> d) Relatando ás regras de LGPD para o gestor. <br>
-                    <br>
-                    <br>
-                </div>
-            </div>
-
-        </div>
-        <div id="painelformulario" style="display: flex; flex-wrap: wrap;">
-            <div style="flex: 1; margin-right: 20px;">
-                <label for="q5">5. Acesso, correção, eliminação, portabilidade, informações, revogação de consentimento,
-                    oposição ao tratamento, decisões automatizadas, compartilhamento, proteção e segurança são os
-                    direitos do titular dos dados para garantir a conformidade com a lgpd ?</label><br>
-                <br><input type="radio" name="q5" value="a"> a) Não<br>
-                <br><input type="radio" name="q5" value="b"> b) Sim<br>
-                <br><input type="radio" name="q5" value="c"> c) Não sei<br>
-                <br><input type="radio" name="q5" value="d"> d) Talvez<br>
-                <br>
-                <br>
-            </div>
-            <div style="flex: 1; margin-right: 20px;">
-                <label for="q6">6. Porque a LGPD tem impacto significativo sobre a contratação de
-                    fornecedores?</label><br>
-                <br><input type="radio" name="q6" value="a"> a) Por que as empresas que contratam fornecedores são
-                limitadas (Ltda) <br>
-                <br><input type="radio" name="q6" value="b"> b) Por que as empresas que contratam os fornecedores são
-                titulares do dados <br>
-                <br><input type="radio" name="q6" value="c"> c) Por que as empresas que contratam fornecedores são
-                sociedade anônimas (S/A)<br>
-                <br><input type="radio" name="q6" value="d"> d) Por que as empresas que contratam os fornecedores são
-                controladores dos dados <br>
-                <br>
-                <br>
             </div>
         </div>
-
-        </div>
-        <div id="painelformulario" style="display: flex; flex-wrap: wrap;">
-            <div style="flex: 1; margin-right: 20px;">
-                <label for="q7">7. Resumidamente, qual o papel da liderança na conformidade à LGPD?</label><br>
-                <br><input type="radio" name="q7" value="a"> a) Responsabilidade e Compartilhamento de dados<br>
-                <br><input type="radio" name="q7" value="b"> b) Conscientização e Responsabilidade<br>
-                <br><input type="radio" name="q7" value="c"> c) Responsabilidade de Rapidez<br>
-                <br><input type="radio" name="q7" value="d"> d) Conscientização e Rapidez<br>
-                <br>
-                <br>
-            </div>
-            <div style="flex: 1; margin-right: 20px;">
-                <label for="q8">8. Quais são os dados tratados pela empresa?</label><br>
-                <br><input type="radio" name="q8" value="a"> a) Presenciais e remotos<br>
-                <br><input type="radio" name="q8" value="b"> b) Pessoais e normais<br>
-                <br><input type="radio" name="q8" value="c"> c) Sensíveis e insensíveis<br>
-                <br><input type="radio" name="q8" value="d"> d) Pessoais (ex:. nome, endereço, telefone) e Sensíveis (
-                ex: prontuário médico , fotos, biometria)<br>
-                <br>
-                <br>
-            </div>
-        </div>
-
-        </div>
-        <div id="painelformulario" style="display: flex; flex-wrap: wrap;">
-            <div style="flex: 1; margin-right: 20px;">
-                <label for="q9">9. A empresa possui politica de privacidade e proteção de dados ? Está publicada no site
-                    svriglobal.com?</label><br>
-                <br><input type="radio" name="q9" value="a"> a) Não <br>
-                <br><input type="radio" name="q9" value="b"> b) Sim<br>
-                <br><input type="radio" name="q9" value="c"> c) Não sei<br>
-                <br><input type="radio" name="q9" value="d"> d) Talvez<br>
-                <br>
-                <br>
-            </div>
-            <div style="flex: 1; margin-right: 20px;">
-                <label for="q10">10. O que fazer em incidentes de tratamento de dados ?</label><br>
-                <br><input type="radio" name="q10" value="a"> a) Isolamento do incidente<br>
-                <br><input type="radio" name="q10" value="b"> b) Notificação da ANPD<br>
-                <br><input type="radio" name="q10" value="c"> c) Avaliação de Risco<br>
-                <br><input type="radio" name="q10" value="d"> d) Todos os itens acima<br>
-                <br>
-                <br>
-            </div>
-        </div>
-        </div>
+        
         <br>
         <button type="submit" id="botaoverificar">Verificar</button>
-        <button type="button" id="finishButton" style="display: none;"
-            onclick="window.location.href='https://forms.office.com/r/xww6tWh8ad';">Finalizar</button>
+        <button type="button" id="finishButton" style="display: none;">Finalizar</button>
     </form>
 
     <script>
@@ -181,34 +98,6 @@
                 correctAnswers++;
             }
 
-            if (document.querySelector('input[name="q4"]:checked').value === '') {
-                correctAnswers++;
-            }
-
-            if (document.querySelector('input[name="q5"]:checked').value === '') {
-                correctAnswers++;
-            }
-
-            if (document.querySelector('input[name="q6"]:checked').value === '') {
-                correctAnswers++;
-            }
-
-            if (document.querySelector('input[name="q7"]:checked').value === '') {
-                correctAnswers++;
-            }
-
-            if (document.querySelector('input[name="q8"]:checked').value === '') {
-                correctAnswers++;
-            }
-
-            if (document.querySelector('input[name="q9"]:checked').value === '') {
-                correctAnswers++;
-            }
-
-            if (document.querySelector('input[name="q10"]:checked').value === '') {
-                correctAnswers++;
-            }
-
             // Exiba o botão "Finalizar" se o usuário acertar pelo menos 7 perguntas
             if (correctAnswers >= 7) {
                 document.getElementById('botaoverificar').style.display = 'none';
@@ -221,6 +110,11 @@
             // Evite o envio do formulário
             return false;
         }
+
+        document.getElementById("finishButton").onclick = function () {
+            window.location.href = "TreinamentoAcademyFormularioSatisfacao.html";
+        };
+
     </script>
 </body>
 
