--- a/treinamentofeasibility/TreinamentoFeasibility.html
+++ b/treinamentofeasibility/TreinamentoFeasibility.html
@@ -5,39 +5,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feasibility</title>
-    <link rel="stylesheet" type="text/css" href="../arte.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/HeaderBaseTreinamentos.css">
 </head>
 
 <body>
-    <div class="imagem-com-fundo">
-        <img src="../img/Logo Science.png" alt="Logo Science">
-        <nav>
+    <header>
+        <div class="menu_pagina">
+            <div class="img_menu">
+                <a href="https://svriglobal.com/">
+                    <img class="logo" src="../assets/img/logo-science-valley.png" alt="Logo Science">
+                </a>
+            </div>
             <ul class="menu">
                 <li><a href="../centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
+                <li><a href="#">Aulas</a>
+                    <ul>
+                        <li><a href="TreinamentoFeasibility.html">Instituição</a></li>
+                        <li><a href="TreinamentoFeasibility2.html">Criando um feasibility</a></li>
+                    </ul>
+                </li>
             </ul>
-        </nav>
-    </div>
-    <br>
-    <h2>F E A S I B I L I T Y</h2>
-    <br>
-    <div class="painel">
-        <br>
-        <br>
-        <br>
-        <br>
-        <div class="teste">
-            <br>
-            <div class="conteinerbotao">
-                <button id="Botaopolotrail" class="botao-linkhubsistema">PI Training</button>
-            </div>
+        
         </div>
+    </header>
+
+    <h2>FEASIBILITY</h2>
+    <h3>Instituição</h3>
+
+    <div class="videoTreinamento">
+        <iframe class="videoTreinamento" src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=acbe7970-6ca0-4c5f-a6f1-27996c6fc87b&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create" width="640" height="360" frameborder="0" scrolling="no" allowfullscreen title="Treinamento Feasibility - Instituição.mp4"></iframe>
     </div>
+
+    <button class="botaovideo" id="Feasibility-aula2">Abertura de um FEASIBILITY</button>
     <script>
-        document.getElementById("Botaosistemas").onclick = function () {
-            window.location.href = "TreinamentoTecnologia_Sistemas.html"
-        };
-        document.getElementById("Botaopolotrail").onclick = function () {
-            window.location.href = "TreinamentoTecnologia_Polo.html"
+        document.getElementById("Feasibility-aula2").onclick = function () {
+            window.location.href = "TreinamentoFeasibility2.html";
         };
     </script>
 </body>
