--- a/treinamentolgpd/TreinamentoLGPDformulario.html
+++ b/treinamentolgpd/TreinamentoLGPDformulario.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário LGPD</title>
-    <link rel="stylesheet" type="text/css" href="../arte.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/HeaderBaseFormulario.css">
 </head>
 <body>
-    <div class="imagem-com-fundo">
-        <a href="TreinamentosLGPD.html">
-
-        <img src="../img/Logo Science.png" alt="Logo Science">
-    </a>
-        <h2 id = "h2formulario">Q U E S T Õ E S</h2>
-    </div>
+    <header>
+        <div class="menu_pagina">
+            <div class="img_menu">
+                <a href="https://svriglobal.com/">
+                    <img class="logo" src="../assets/img/logo-science-valley.png" alt="Logo Science">
+                </a>
+            </div>
+            <h2 id = "h2formulario">QUESTÕES</h2>
+        </div>
+    </header>    
     <br>
     <br>
         <form id="quizForm" onsubmit="return validateQuiz()">
@@ -129,7 +132,7 @@
 </div>              
 <br>
             <button type="submit" id="botaoverificar">Verificar</button>
-            <button type="button" id="finishButton" style="display: none;" onclick="window.location.href='https://forms.office.com/r/xww6tWh8ad';">Finalizar</button>
+            <button type="button" id="finishButton" style="display: none;" >Finalizar</button>
         </form>
         
         <script>
@@ -203,6 +206,11 @@
                 // Evite o envio do formulário
                 return false;
             }
+
+            document.getElementById("finishButton").onclick = function () {
+            window.location.href = "TreinamentoLGPDFormularioSatisfacao.html";
+        };
+
         </script>
 </body>
 </html>
