--- a/treinamentolgpd/TreinamentosLGPD.html
+++ b/treinamentolgpd/TreinamentosLGPD.html
@@ -5,54 +5,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Treinamento LGPD</title>
-    <link rel="stylesheet" type="text/css" href="../arte.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/HeaderBaseTreinamentos.css">
+
+    
 </head>
 
 <body>
-    <div class="imagem-com-fundo">
-        <img src="../img/Logo Science.png" alt="Logo Science">
-        <nav>
-            <ul class="menu">
-                <li><a href="../centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
-                <li><a href="#">Aulas</a>
-                    <ul>
-                        <li><a href="TreinamentosLGPD.html">O que é a Lei Geral de Proteção de Dados LGPD</a></li>
-                        <li><a href="TreinamentosLGPD2.html">Visão Geral da Lei Geral de Proteção de Dados</a></li>
-                        <li><a href="TreinamentosLGPD3.html">O que é Dado Pessoal</a></li>
-                        <li><a href="TreinamentosLGPD4.html">Fundamentos da LGPD</a></li>
-                        <li><a href="TreinamentosLGPD5.html">Tratamento Legal de Dados Pessoais</a></li>
-                        <li><a href="TreinamentosLGPD6.html">Quais áreas tratam dados pessoais</a></li>
-                        <li><a href="TreinamentosLGPD7.html">As 10 Bases legais de tratamento de dados pessoais</a></li>
-                        <li><a href="TreinamentosLGPD8.html">Os 10 Princípios para Tratamento de Dados pessoais</a></li>
-                        <li><a href="TreinamentosLGPD9.html">O Projeto LGPD na instituição</a></li>
-                        <li><a href="TreinamentosLGPD10.html">O papel da liderança na conformidade à LGPD</a></li>
-                        <li><a href="TreinamentosLGPD11.html">A LGPD na sua vida pessoal e profissional</a></li>
-                        <li><a href="TreinamentosLGPD12.html">O que fazer em um incidentes de tratamento de dados</a>
-                        </li>
-                        <li><a href="TreinamentosLGPD13.html">Impactos da LGPD nos fornecedores da instituição</a></li>
-                    </ul>
-            </ul>
-        </nav>
-    </div>
-    <br>
-    <br>
-    <h2>T R E I N A M E N T O - L G P D</h2>
-    <br>
+    <header>
+        <div class="menu_pagina">
+            <div class="img_menu">
+                <a href="https://svriglobal.com/">
+                    <img class="logo" src="../assets/img/logo-science-valley.png" alt="Logo Science">
+                </a>
+            </div>
+            <div class="opçoes">
+                <ul class="menu">
+                    <li><a href="../centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
+                    <li><a href="#">Aulas</a>
+                        <ul>
+                            <li><a href="TreinamentosLGPD.html">O que é a Lei Geral de Proteção de Dados LGPD</a></li>
+                            <li><a href="TreinamentosLGPD2.html">Visão Geral da Lei Geral de Proteção de Dados</a></li>
+                            <li><a href="TreinamentosLGPD3.html">O que é Dado Pessoal</a></li>
+                            <li><a href="TreinamentosLGPD4.html">Fundamentos da LGPD</a></li>
+                            <li><a href="TreinamentosLGPD5.html">Tratamento Legal de Dados Pessoais</a></li>
+                            <li><a href="TreinamentosLGPD6.html">Quais áreas tratam dados pessoais</a></li>
+                            <li><a href="TreinamentosLGPD7.html">As 10 Bases legais de tratamento de dados pessoais</a></li>
+                            <li><a href="TreinamentosLGPD8.html">Os 10 Princípios para Tratamento de Dados pessoais</a></li>
+                            <li><a href="TreinamentosLGPD9.html">O Projeto LGPD na instituição</a></li>
+                            <li><a href="TreinamentosLGPD10.html">O papel da liderança na conformidade à LGPD</a></li>
+                            <li><a href="TreinamentosLGPD11.html">A LGPD na sua vida pessoal e profissional</a></li>
+                            <li><a href="TreinamentosLGPD12.html">O que fazer em um incidentes de tratamento de dados</a>
+                            </li>
+                            <li><a href="TreinamentosLGPD13.html">Impactos da LGPD nos fornecedores da instituição</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+    </header>    
+    
+    <h2>TREINAMENTO - LGPD</h2>
     <h3> O que é a Lei Geral de Proteção de Dados LGPD </h5>
-        <br>
-        <iframe class="video"
-            src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=3925cfa1-f13a-4d34-9e5e-6421ade8e864&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
-            width="640" height="360" frameborder="0" scrolling="no" allowfullscreen
-            title="LGPD - LIVE 1 - O que é a Lei Geral de Proteção de Dados LGPD.mp4"></iframe>
-        <br>
-        <br>
-        <button class="botaovideo" id="lgpd-aula2" class="botao-link">Visão Geral da Lei Geral <br> de Proteção de
-            Dados</button>
+        <div class="videoTreinamento">
+            <iframe class="videoTreinamento"
+                src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=3925cfa1-f13a-4d34-9e5e-6421ade8e864&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
+                 frameborder="0" scrolling="no" allowfullscreen
+                title="LGPD - LIVE 1 - O que é a Lei Geral de Proteção de Dados LGPD.mp4"></iframe> 
+        </div>    
+        <button class="botaovideo" id="lgpd-aula1" class="botao-link">Visão Geral da Lei Geral <br> de Proteção de Dados</button>
         <script>
-            document.getElementById("lgpd-aula2").onclick = function () {
-                window.location.href = "TreinamentosLGPD2.html";
-            };
+            document.getElementById("lgpd-aula1").onclick = function () {
+            window.location.href = "TreinamentosLGPD2.html";
+        };
         </script>
+
 </body>
 
 </html>
