--- a/treinamentolgpd/TreinamentosLGPD12.html
+++ b/treinamentolgpd/TreinamentosLGPD12.html
@@ -5,17 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Treinamento LGPD</title>
-    <link rel="stylesheet" type="text/css" href="../arte.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/HeaderBaseTreinamentos.css">
 </head>
 
 <body>
-    <div class="imagem-com-fundo">
-        <img src="../img/Logo Science.png" alt="Logo Science">
-        <nav>
-            <ul class="menu">
-                <li><a href="../centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
-                <li><a href="#">Aulas</a>
-                    <ul>
+    <header>
+        <div class="menu_pagina">
+            <div class="img_menu">
+                <a href="https://svriglobal.com/">
+                    <img class="logo" src="../assets/img/logo-science-valley.png" alt="Logo Science">
+                </a>
+            </div>
+            <div class="opçoes">
+                <ul class="menu">
+                    <li><a href="../centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
+                    <li><a href="#">Aulas</a>
+                        <ul>
                         <li><a href="TreinamentosLGPD.html">O que é a Lei Geral de Proteção de Dados LGPD</a></li>
                         <li><a href="TreinamentosLGPD2.html">Visão Geral da Lei Geral de Proteção de Dados</a></li>
                         <li><a href="TreinamentosLGPD3.html">O que é Dado Pessoal</a></li>
@@ -30,22 +35,21 @@
                         <li><a href="TreinamentosLGPD12.html">O que fazer em um incidentes de tratamento de dados</a>
                         </li>
                         <li><a href="TreinamentosLGPD13.html">Impactos da LGPD nos fornecedores da instituição</a></li>
-                    </ul>
-            </ul>
-        </nav>
-    </div>
-    <br>
-    <br>
-    <h2>T R E I N A M E N T O - L G P D</h2>
-    <br>
-    <h3>O que fazer em um incidentes de tratamento de dados</h5>
-        <br>
-        <iframe class="video"
+                   </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+    </header>
+    <h2>TREINAMENTO - LGPD</h2>
+    
+    <h3>O que fazer em um incidentes de tratamento de dados</h3>
+        <div class="videoTreinamento">
+            <iframe class="videoTreinamento"
             src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=03ea5db9-3ca4-4226-b69b-c8aeae984602&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
             width="640" height="360" frameborder="0" scrolling="no" allowfullscreen
-            title="LGPD - LIVE 12 - O que fazer em um incidentes de tratamento de dados.mp4"></iframe>
-        <br>
-        <br>
+            title="LGPD - LIVE 12 - O que fazer em um incidentes de tratamento de dados.mp4"></iframe></div> 
         <button class="botaovideo" id="lgpd-aula12" class="botao-link">Impactos da LGPD nos fornecedores da
             instituição</button>
         <script>
