--- a/treinamentotecnologia/TreinamentoTecnologia_Email3.html
+++ b/treinamentotecnologia/TreinamentoTecnologia_Email3.html
@@ -5,37 +5,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Treinamento Tecnologia</title>
-    <link rel="stylesheet" type="text/css" href="../arte.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/HeaderBaseTreinamentos.css">
 </head>
 
 <body>
-    <div class="imagem-com-fundo">
-        <img src="../img/Logo Science.png" alt="Logo Science">
-        <nav>
+    <header>
+        <div class="menu_pagina">
+            <div class="img_menu">
+                <a href="https://svriglobal.com/">
+                    <img class="logo" src="../assets/img/logo-science-valley.png" alt="Logo Science">
+                </a>
+            </div>
             <ul class="menu">
-                <li><a href="../integracaoti/IntegracaoTI.html">Integração Science</a></li>
+                <li><a href="../integracaoti/IntegracaoTI.html">Integração Ti </a></li>
                 <li><a href="#">Aulas</a>
                     <ul>
                         <li><a href="TreinamentoTecnologia_Email.html">Assinatura webmail</a></li>
                         <li><a href="TreinamentoTecnologia_Email2.html">Assinatura Outlook</a></li>
                         <li><a href="TreinamentoTecnologia_Email3.html">Primeiro Acesso</a></li>
-                    </ul>
+                   </ul>
+                </li>
             </ul>
-        </nav>
-    </div>
-    <br>
-    <br>
-    <h2>T U T O R I A L <br> E - M A I L </h2>
-    <br>
+        </div>
+    </header>
+    <h2>TUTORIAL  E-MAIL </h2>
+    
     <h3> Primeiro Acesso</h5>
-        <br>
-        <iframe class="video"
+        <div class="videoTreinamento">
+            <iframe class="videoTreinamento"
             src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=54b23e88-44da-489a-9e08-180978acffd9&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
             width="640" height="360" frameborder="0" scrolling="no" allowfullscreen
             title="e-mail - primiero acesso via web.mp4"></iframe>
-        <br>
-        <br>
-        <button class="botaovideoEmail" id="proximo" class="botao-link">Estrutura do TI</button>
+        </div> 
+        <button class="botaovideo" id="proximo" class="botao-link">Estrutura do TI</button>
         <script>
             document.getElementById("proximo").onclick = function () {
                 window.location.href = "TreinamentoTecnologia_estruturati.html";
