--- a/treinamentotecnologia/TreinamentoTecnologia_PoloVideo2.html
+++ b/treinamentotecnologia/TreinamentoTecnologia_PoloVideo2.html
@@ -5,35 +5,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Treinamento Polotrail</title>
-    <link rel="stylesheet" type="text/css" href="../arte.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/HeaderBaseTreinamentos.css">
 </head>
 
 <body>
-    <div class="imagem-com-fundo">
-        <img src="../img/Logo Science.png" alt="Logo Science">
-        <nav>
-            <ul class="menu">
-                <li><a href="../centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
-                <li><a href="#">Aulas</a>
-                    <ul>
+    <header>
+        <div class="menu_pagina">
+            <div class="img_menu">
+                <a href="https://svriglobal.com/">
+                    <img class="logo" src="../assets/img/logo-science-valley.png" alt="Logo Science">
+                </a>
+            </div>
+            <div class="opçoes">
+                <ul class="menu">
+                    <li><a href="../centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
+                    <li><a href="#">Aulas</a>
+                        <ul>
                         <li><a href="TreinamentoTecnologia_PoloVideo.html"> Cadastro de Monitoria no PoloTrail </a></li>
-                        <li><a href="TreinamentoTecnologia_PoloVideo2.html"> Utilização do PoloTrail </a></li>                    </ul>
-            </ul>
-        </nav>
-    </div>
-    <br>
-    <br>
-    <h2> P O L O T R A I L </h2>
-    <br>
+                        <li><a href="TreinamentoTecnologia_PoloVideo2.html"> Utilização do PoloTrail </a></li>                   </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+    </header>
+    <h2> POLOTRAIL </h2>
     <h3> Utilização do PoloTrail</h5>
-        <br>
-        <iframe class="video"
+        <div class="videoTreinamento">
+            <iframe class="videoTreinamento"
             src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=906fb382-f09b-4648-bdd4-a3e49c154099&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
             width="640" height="360" frameborder="0" scrolling="no" allowfullscreen
-            title="Utilização do PoloTrial I.mp4"></iframe>
-        <br>
-        <br>
-        <button class="botaovideoEmail" id="formstecnologia">Formulário Tecnologia</button>
+            title="Utilização do PoloTrial I.mp4"></iframe></div> 
+        <button class="botaovideo" id="formstecnologia">Formulário Tecnologia</button>
         <script>
             document.getElementById("formstecnologia").onclick = function () {
                 window.location.href = "TreinamentoTecnologia_PoloForms.html";
