--- a/treinamentotecnologia/hubtecnologia.html
+++ b/treinamentotecnologia/hubtecnologia.html
@@ -5,37 +5,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Módulo Tecnologia</title>
-    <link rel="stylesheet" type="text/css" href="../arte.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/HeaderBaseImgBotoes.css">
 </head>
 
 <body>
-    <div class="imagem-com-fundo">
-        <img src="../img/Logo Science.png" alt="Logo Science">
-        <nav>
-            <ul class="menu">
-                <li><a href="../centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
-            </ul>
-        </nav>
-    </div>
-    <br>
-    <h2>M Ó D U L O S - S C I E N C E</h2>
-    <br>
-    <div class="painel">
-        <br>
-        <br>
-        <img src="../img/tecnologia.jpg" id="tech">
-        <br>
-        <br>
-        <div class="teste">
-            <br>
-            <div class="sistemas">
-                <button id="Botaosistemas" class="botao-linkhubsistema">Acessos</button>
+
+     <header>
+        <div class="menu_pagina">
+            <div class="img_menu">
+                <a href="https://svriglobal.com/">
+                    <img class="logo" src="../assets/img/logo-science-valley.png" alt="Logo Science">
+                </a>
             </div>
-            <div class="conteinerbotao">
-                <button id="Botaopolotrail" class="botao-linkhubsistema">PoloTrail</button>
+            <nav>
+                <ul class="menu">
+                    <li><a href="../centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <h2>MÓDULOS - SCIENCE</h2>
+
+    <div class="painel">
+        <div class="imgtec">
+            <img class="imgtec" src="../assets/img/tecnologia.jpg" id="tech">
+        </div>
+
+        <div class="Botoes_grid">
+            <div class="Botoes">
+                <button id="Botaosistemas" class="botaovideo">Acessos</button>
+            </div>
+
+            <div class="Botoes">
+                <button id="Botaopolotrail" class="botaovideo">PoloTrail</button>
             </div>
         </div>
     </div>
+
     <script>
         document.getElementById("Botaosistemas").onclick = function () {
             window.location.href = "TreinamentoTecnologia_Sistemas.html"
