--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Integração</title>
-    <link rel="stylesheet" type="text/css" href="../assets/css/index.css">    
+    <link rel="stylesheet" type="text/css" href="./assets/css/index.css">    
 </head>
 
 <body>
@@ -15,7 +15,7 @@
         <div class="menu_pagina">
             <div class="img_menu">
                 <a href="https://svriglobal.com/">
-                    <img class="logo" src="../assets/img/logo-science-valley.png" alt="Logo Science">
+                    <img class="logo" src="./assets/img/logo-science-valley.png" alt="Logo Science">
                 </a>
             </div>
             <div class="itens_menu">
@@ -26,6 +26,7 @@
                         <button id="Botaodiretrizes" class="botao-link">Políticas e Diretrizes </button>
                         <button id="Botaotecnologia" class="botao-link">Integração Tecnologia</button>
                     </ul>
+                    <script rel="stylesheet" src="./assets/js/index.js"></script>
                 </nav>
             </div>
             
@@ -43,9 +44,9 @@
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe>
         </div>
-
-            <script rel="stylesheet" src="../assets/js/index.js"></script>
     </main>
+
+    
 </body>
 
 </html>
