--- a/treinamentofeasibility/TreinamentoFeasibility2.html
+++ b/treinamentofeasibility/TreinamentoFeasibility2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feasibility</title>
-    <link rel="stylesheet" type="text/css" href="../assets/css/HeaderBaseTreinamentos.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/HeaderBaseTreinamentos.css">
 </head>
 
 <body>
@@ -13,11 +13,11 @@
         <div class="menu_pagina">
             <div class="img_menu">
                 <a href="https://svriglobal.com/">
-                    <img class="logo" src="../assets/img/logo-science-valley.png" alt="Logo Science">
+                    <img class="logo" src="./assets/img/logo-science-valley.png" alt="Logo Science">
                 </a>
             </div>
             <ul class="menu">
-                <li><a href="../centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
+                <li><a href="./centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
                 <li><a href="#">Aulas</a>
                     <ul>
                         <li><a href="TreinamentoFeasibility.html">Instituição</a></li>
@@ -39,7 +39,7 @@
     <button class="botaovideo" id="Feasibility-aula2">Painel de Treinamentos</button>
     <script>
         document.getElementById("Feasibility-aula2").onclick = function () {
-            window.location.href = "../centraltreinamentos/centralTreinamentos.html";
+            window.location.href = "./centraltreinamentos/centralTreinamentos.html";
         };
     </script>
 </body>
