--- a/Treinamento_Financeiro_Polotrial/TreinamentoFinanceiroPolotrial_Aula3.html
+++ b/Treinamento_Financeiro_Polotrial/TreinamentoFinanceiroPolotrial_Aula3.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Treinamento Financeiro PoloTrial</title>
-    <link rel="stylesheet" type="text/css" href="../assets/css/HeaderBaseTreinamentos.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/HeaderBaseTreinamentos.css">
 </head>
 
 <body>
@@ -13,12 +13,12 @@
         <div class="menu_pagina">
             <div class="img_menu">
                 <a href="https://svriglobal.com/">
-                    <img class="logo" src="../assets/img/logo-science-valley.png" alt="Logo Science">
+                    <img class="logo" src="./assets/img/logo-science-valley.png" alt="Logo Science">
                 </a>
             </div>
             <div class="opçoes">
                 <ul class="menu">
-                    <li><a href="../centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
+                    <li><a href="./centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
                     <li><a href="#">Aulas</a>
                         <ul>
                         <li><a href="TreinamentoFinanceiroPolotrial_Aula1.html">Gestão Financeira</a></li>
@@ -42,7 +42,7 @@
         <button class="botaovideo" id="lgpd-aula2" class="botao-link">Menu Treinamentos</button>
         <script>
             document.getElementById("lgpd-aula2").onclick = function () {
-                window.location.href = "../centraltreinamentos/centralTreinamentos.html";
+                window.location.href = "./centraltreinamentos/centralTreinamentos.html";
             };
         </script>
 </body>
