--- a/treinamentolgpd/TreinamentoLGPDformulario.html
+++ b/treinamentolgpd/TreinamentoLGPDformulario.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário LGPD</title>
-    <link rel="stylesheet" type="text/css" href="../assets/css/HeaderBaseFormulario.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/HeaderBaseFormulario.css">
 </head>
 <body>
     <header>
         <div class="menu_pagina">
             <div class="img_menu">
                 <a href="https://svriglobal.com/">
-                    <img class="logo" src="../assets/img/logo-science-valley.png" alt="Logo Science">
+                    <img class="logo" src="./assets/img/logo-science-valley.png" alt="Logo Science">
                 </a>
             </div>
             <h2 id = "h2formulario">QUESTÕES</h2>
