--- a/centraltreinamentos/centralTreinamentos.html
+++ b/centraltreinamentos/centralTreinamentos.html
@@ -81,7 +81,7 @@
 
         
     </main>
-    <script src="./assets/js/centralTreinamentos.js"></script>
+    <script src="../assets/js/centralTreinamentos.js"></script>
 </body>
 
 </html>
